Ensure horizontal scroll is always at bottom of screen

--- a/app/assets/stylesheets/components/fullscreen-table.scss
+++ b/app/assets/stylesheets/components/fullscreen-table.scss
@@ -8,6 +8,7 @@ body.with-fullscreen {
   #footer {
     height: 0;
     overflow: hidden;
+    border-color: $white;
   }
 
   .shim {
